# llaminal

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/prd/: Llaminal_MVP_PRD_Revised.md
src/llaminal/: agent.py  ai_mode.py  banners.py  cli.py  client.py  config.py  cwd_tracker.py  discover.py  moods.py  pty_executor.py  render.py  scrollback.py  session.py  shell.py  storage.py  themes.py
src/llaminal/tools/: bash.py  files.py  registry.py
